@@ -56,5 +56,14 @@ const int NEdge::edgeVertex[6][2] = {
     { 1, 3 },
     { 2, 3 }};
 
+const NPerm NEdge::ordering[6] = {
+    NPerm(0, 1, 2, 3),
+    NPerm(0, 2, 3, 1),
+    NPerm(0, 3, 1, 2),
+    NPerm(1, 2, 0, 3),
+    NPerm(1, 3, 2, 0),
+    NPerm(2, 3, 0, 1)
+};
+
 } // namespace regina
 
